Fix : wrong background on mobile design

--- a/htdocs/css/default.css
+++ b/htdocs/css/default.css
@@ -146,7 +146,7 @@ input[type=url],input[type=text]{
     }
     
     html{
-        background: #006699;
+        background-image: none;
     }
     
     body{
